# qs_case_study

./: .gitignore  README.md
task1/: task_thread.hpp
task2/: matrix_rotate_90.py
task3/: CMakeLists.txt
task3/doc/: communication_builder.puml
task3/src/: CMakeLists.txt  main.cpp
task3/src/comm/: CMakeLists.txt
task3/src/comm/impl/: CMakeLists.txt  communication_base.cpp  communication_base.hpp  communication_builder.cpp  send_scheduler.hpp  udp.cpp  udp.hpp
task3/src/comm/interface/: CMakeLists.txt  comm_types.hpp  communication_builder.hpp  iCommunication.hpp
task3/src/utils/: CMakeLists.txt  socket_utils.hpp
